--- a/LogicaProgr.ipynb
+++ b/LogicaProgr.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,19 +38,45 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Escrever na tela a sequência de Fibonacci até 12"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequência de Fibonacci até 12 :\n",
+      "0 , 1 , 1 , 2 , 3 , 5 , 8 , 13 , 21 , 34 , 55 , 89 , "
+     ]
+    }
+   ],
+   "source": [
+    "n = 12; n1 = 0; n2 = 1\n",
+    "\n",
+    "count = 0\n",
+    "if n < 0:\n",
+    "    print('A Posição Não Pode ser Negativa')\n",
+    "elif n == 1:\n",
+    "    print('Sequência de Fibonacci até ',n,':')\n",
+    "    print(n1)\n",
+    "else:\n",
+    "    print('Sequência de Fibonacci até',n,':')\n",
+    "    while count < n:\n",
+    "        print(n1, end = ' , ')\n",
+    "        nth = n1 + n2\n",
+    "        n1 = n2\n",
+    "        n2 = nth\n",
+    "        count += 1"
+   ]
   }
  ],
  "metadata": {
