--- a/LogicaProgramacao/LogicaProgr.ipynb
+++ b/LogicaProgramacao/LogicaProgr.ipynb
@@ -77,6 +77,40 @@
     "        n2 = nth\n",
     "        count += 1"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Entre dois números, retorne o maior deles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def maximo2(a,b):\n",
+    "    if a > b:\n",
+    "        return a\n",
+    "    else:\n",
+    "        return b\n",
+    "    \n",
+    "maximo2(2,8)"
+   ]
   }
  ],
  "metadata": {
