--- a/LogicaProgramacao/LogicaProgr.ipynb
+++ b/LogicaProgramacao/LogicaProgr.ipynb
@@ -111,6 +111,68 @@
     "    \n",
     "maximo2(2,8)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Entre três números, retorne o maior deles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def maximo3_v1 (a,b,c):\n",
+    "    if a > b and a > c:\n",
+    "        return a\n",
+    "    elif b > c:\n",
+    "        return b\n",
+    "    else:\n",
+    "        return c\n",
+    "\n",
+    "maximo3_v1(8, 10, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def maximo3_v2(a, b, c):\n",
+    "    if a < b:\n",
+    "        return max(b, c)\n",
+    "    else:\n",
+    "        return max(a, c)\n",
+    "    \n",
+    "maximo3_v2(17, 13, 14)"
+   ]
   }
  ],
  "metadata": {
