--- a/Curso Bônus - Introdução à Lógica de Programação/CursoBonusLogicaProgr.ipynb
+++ b/Curso Bônus - Introdução à Lógica de Programação/CursoBonusLogicaProgr.ipynb
@@ -173,6 +173,70 @@
     "    \n",
     "maximo3_v2(17, 13, 14)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Criar um programa e somar os dígitos de 1 a 5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "soma = 0\n",
+    "    \n",
+    "for i in range(0, 5, 1):\n",
+    "    soma = soma + (i+1)\n",
+    "        \n",
+    "print(soma) "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Criar um programa e somar os dígitos de 1 até um valor qualquer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500500"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def soma(n):\n",
+    "    soma = 0\n",
+    "    for i in range(0, n+1, 1):\n",
+    "        soma = soma + i\n",
+    "    return soma    \n",
+    "    \n",
+    "soma(1000)  "
+   ]
   }
  ],
  "metadata": {
