--- a/Curso Bônus - Introdução à Lógica de Programação/CursoBonusLogicaProgr.ipynb
+++ b/Curso Bônus - Introdução à Lógica de Programação/CursoBonusLogicaProgr.ipynb
@@ -237,6 +237,34 @@
     "    \n",
     "soma(1000)  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500500"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def soma(n):\n",
+    "    soma = 0\n",
+    "    i = 1\n",
+    "    while i <= n:\n",
+    "        soma = soma + i\n",
+    "        i = i + 1\n",
+    "    return soma\n",
+    "\n",
+    "soma(1000)"
+   ]
   }
  ],
  "metadata": {
