--- a/Curso Bônus - Introdução à Lógica de Programação/CursoBonusLogicaProgr.ipynb
+++ b/Curso Bônus - Introdução à Lógica de Programação/CursoBonusLogicaProgr.ipynb
@@ -265,6 +265,35 @@
     "\n",
     "soma(1000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500500"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Método Recursivo\n",
+    "\n",
+    "def somaTotal(n):\n",
+    "    if n > 0:\n",
+    "        soma = somaTotal(n-1) + n\n",
+    "    else:\n",
+    "        soma = 0\n",
+    "    return soma\n",
+    "\n",
+    "somaTotal(1000)"
+   ]
   }
  ],
  "metadata": {
