--- a/Curso Bônus - Introdução à Lógica de Programação/CursoBonusLogicaProgr.ipynb
+++ b/Curso Bônus - Introdução à Lógica de Programação/CursoBonusLogicaProgr.ipynb
@@ -294,6 +294,14 @@
     "\n",
     "somaTotal(1000)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dada a lista de famosos autores brasileiros, crie um programa que pesquise se \"Clarice Lispector\" está na lista e se estiver indique o índice da posição na lista. Aqui está a lista: autores = ['Monteiro Lobato', 'José de Alencar', 'Cecília Meireles', 'Carlos Drummond de Andrade', 'Machado de Assis', 'Clarice Lispector', 'GracilianoRamos', 'Guimarães Rosa', 'Ruth Rocha', 'Luis Fernando Veríssimo']. Dica: a lista NÃO está ordenada e a Pesquisa Binária tem como premissa que a lista esteja ordenada."
+   ]
   }
  ],
  "metadata": {
