--- a/Curso Bônus - Introdução à Lógica de Programação/CursoBonusLogicaProgr.ipynb
+++ b/Curso Bônus - Introdução à Lógica de Programação/CursoBonusLogicaProgr.ipynb
@@ -302,6 +302,46 @@
    "source": [
     "### Dada a lista de famosos autores brasileiros, crie um programa que pesquise se \"Clarice Lispector\" está na lista e se estiver indique o índice da posição na lista. Aqui está a lista: autores = ['Monteiro Lobato', 'José de Alencar', 'Cecília Meireles', 'Carlos Drummond de Andrade', 'Machado de Assis', 'Clarice Lispector', 'GracilianoRamos', 'Guimarães Rosa', 'Ruth Rocha', 'Luis Fernando Veríssimo']. Dica: a lista NÃO está ordenada e a Pesquisa Binária tem como premissa que a lista esteja ordenada."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O autor \"Clarice Lispector\" foi encontrado na posição 2 da lista.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pesquisa Binária\n",
+    "\n",
+    "def pesquisa_binaria(lista, valor_pesquisado):\n",
+    "    lista_ordenada = sorted(lista)\n",
+    "    esquerda = 0\n",
+    "    direita = len(lista_ordenada) - 1\n",
+    "    while esquerda <= direita:\n",
+    "        meio = (esquerda + direita) // 2\n",
+    "        if lista_ordenada[meio] == valor_pesquisado:\n",
+    "            return meio\n",
+    "        elif lista_ordenada[meio] < valor_pesquisado:\n",
+    "            esquerda = meio + 1\n",
+    "        else:\n",
+    "            direita = meio - 1\n",
+    "    return -1\n",
+    "\n",
+    "autores = ['Monteiro Lobato', 'José de Alencar', 'Cecília Meireles', 'Carlos Drummond de Andrade', 'Machado de Assis', 'Clarice Lispector', 'Graciliano Ramos', 'Guimarães Rosa', 'Ruth Rocha', 'Luis Fernando Veríssimo']\n",
+    "autor_pesquisado = input(\"Digite o nome do autor a ser pesquisado: \")\n",
+    "indice = pesquisa_binaria(autores, autor_pesquisado)\n",
+    "\n",
+    "if indice == -1:\n",
+    "    print(f'O autor \"{autor_pesquisado}\" não foi encontrado na lista.')\n",
+    "else:\n",
+    "    print(f'O autor \"{autor_pesquisado}\" foi encontrado na posição {indice} da lista.')\n"
+   ]
   }
  ],
  "metadata": {
