--- a/Curso Bônus - Introdução à Lógica de Programação/CursoBonusLogicaProgr.ipynb
+++ b/Curso Bônus - Introdução à Lógica de Programação/CursoBonusLogicaProgr.ipynb
@@ -342,6 +342,47 @@
     "else:\n",
     "    print(f'O autor \"{autor_pesquisado}\" foi encontrado na posição {indice} da lista.')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O autor \"Clarice Lispector\" foi encontrado na posição 2 da lista.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pesquisa Binária\n",
+    "\n",
+    "autores = ['Monteiro Lobato', 'José de Alencar', 'Cecília Meireles', 'Carlos Drummond de Andrade', 'Machado de Assis', 'Clarice Lispector', 'Graciliano Ramos', 'Guimarães Rosa', 'Ruth Rocha', 'Luis Fernando Veríssimo']\n",
+    "\n",
+    "autor_pesquisado = input(\"Digite o nome do autor a ser pesquisado: \")\n",
+    "\n",
+    "autores_ordenados = sorted(autores)\n",
+    "\n",
+    "encontrado = False\n",
+    "esquerda = 0\n",
+    "direita = len(autores_ordenados) - 1\n",
+    "while esquerda <= direita and not encontrado:\n",
+    "    meio = (esquerda + direita) // 2\n",
+    "    if autores_ordenados[meio] == autor_pesquisado:\n",
+    "        encontrado = True\n",
+    "        indice = meio\n",
+    "    elif autores_ordenados[meio] < autor_pesquisado:\n",
+    "        esquerda = meio + 1\n",
+    "    else:\n",
+    "        direita = meio - 1\n",
+    "\n",
+    "if encontrado:\n",
+    "    print(f'O autor \"{autor_pesquisado}\" foi encontrado na posição {indice} da lista.')\n",
+    "else:\n",
+    "    print(f'O autor \"{autor_pesquisado}\" não foi encontrado na lista.')\n"
+   ]
   }
  ],
  "metadata": {
