--- a/Curso Python - Nível Introdutório/Introdução à Lógica de Programação/IntroducaLogicaProgramacao.ipynb
+++ b/Curso Python - Nível Introdutório/Introdução à Lógica de Programação/IntroducaLogicaProgramacao.ipynb
@@ -1,21 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Olá Mundo\n"
-     ]
-    }
-   ],
    "source": [
-    "print('Olá Mundo')"
+    "### Calcular a Área de um Paralelograma."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
