--- a/Curso Python - Nível Introdutório/Introdução à Lógica de Programação/IntroducaLogicaProgramacao.ipynb
+++ b/Curso Python - Nível Introdutório/Introdução à Lógica de Programação/IntroducaLogicaProgramacao.ipynb
@@ -10,10 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "A área do paralelograma é 22.50\n"
+     ]
+    }
+   ],
+   "source": [
+    "base = float(input(\"Digite o valor da Base: \"))\n",
+    "altura = float(input(\"Digite o valor da Altura: \"))\n",
+    "\n",
+    "area = base * altura\n",
+    "\n",
+    "print(f\"\\nA área do paralelograma é {area:.2f}\")"
+   ]
   }
  ],
  "metadata": {
