--- a/Curso Python - Nível Introdutório/Introdução à Lógica de Programação/IntroducaLogicaProgramacao.ipynb
+++ b/Curso Python - Nível Introdutório/Introdução à Lógica de Programação/IntroducaLogicaProgramacao.ipynb
@@ -10,19 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Bem-vindo ao Calculador de Área do Paralelograma\n",
       "\n",
       "A área do paralelograma é 22.50\n"
      ]
     }
    ],
    "source": [
+    "print(\"Bem-vindo ao Calculador de Área do Paralelograma\")\n",
+    "\n",
     "base = float(input(\"Digite o valor da Base: \"))\n",
     "altura = float(input(\"Digite o valor da Altura: \"))\n",
     "\n",
