--- a/Curso Python - Nível Introdutório/Introdução à Lógica de Programação/IntroducaLogicaProgramacao.ipynb
+++ b/Curso Python - Nível Introdutório/Introdução à Lógica de Programação/IntroducaLogicaProgramacao.ipynb
@@ -33,6 +33,14 @@
     "\n",
     "print(f\"\\nA área do paralelograma é {area:.2f}\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculadora Simples.\n"
+   ]
   }
  ],
  "metadata": {
