--- a/Curso Python - Nível Introdutório/Introdução à Lógica de Programação/IntroducaLogicaProgramacao.ipynb
+++ b/Curso Python - Nível Introdutório/Introdução à Lógica de Programação/IntroducaLogicaProgramacao.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
      "text": [
       "Bem-vindo ao Calculador de Área do Paralelograma\n",
       "\n",
-      "A área do paralelograma é 22.50\n"
+      "A área do paralelograma é 0.00\n"
      ]
     }
    ],
@@ -40,6 +40,45 @@
    "metadata": {},
    "source": [
     "### Calculadora Simples.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bem-vindo à Calculadora\n",
+      "O resultado é 23.52\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Bem-vindo à Calculadora\")\n",
+    "\n",
+    "num1 = float(input(\"Digite o Primeiro Número: \"))\n",
+    "num2 = float(input(\"Digite o Segundo Número: \"))\n",
+    "\n",
+    "\n",
+    "operacao = input(\"Selecione uma Operação (+, -, *, /): \")\n",
+    "\n",
+    "if operacao == \"+\":\n",
+    "    resultado = num1 + num2\n",
+    "    print(f\"O resultado é {resultado:.2f}\")\n",
+    "elif operacao == \"-\":\n",
+    "    resultado = num1 - num2\n",
+    "    print(f\"O resultado é {resultado:.2f}\")\n",
+    "elif operacao == \"*\":\n",
+    "    resultado = num1 * num2\n",
+    "    print(f\"O resultado é {resultado:.2f}\")\n",
+    "elif operacao == \"/\":\n",
+    "    resultado = num1 / num2\n",
+    "    print(f\"O resultado é {resultado:.2f}\")\n",
+    "else:\n",
+    "    print(\"Operação Inválida.\")"
    ]
   }
  ],
