--- a/Curso Python - Nível Introdutório/Introdução à Lógica de Programação/IntroducaLogicaProgramacao.ipynb
+++ b/Curso Python - Nível Introdutório/Introdução à Lógica de Programação/IntroducaLogicaProgramacao.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -52,19 +52,37 @@
      "output_type": "stream",
      "text": [
       "Bem-vindo à Calculadora\n",
-      "O resultado é 23.52\n"
+      "\n",
+      "\n",
+      "Não é possível dividir por zero\n",
+      "\n",
+      "\n",
+      "Não é possível dividir por zero\n",
+      "\n",
+      "\n",
+      "O resultado é 24.00\n"
      ]
     }
    ],
    "source": [
     "print(\"Bem-vindo à Calculadora\")\n",
+    "print()\n",
     "\n",
     "num1 = float(input(\"Digite o Primeiro Número: \"))\n",
     "num2 = float(input(\"Digite o Segundo Número: \"))\n",
     "\n",
-    "\n",
     "operacao = input(\"Selecione uma Operação (+, -, *, /): \")\n",
+    "print()\n",
     "\n",
+    "if num2 == 0 and operacao == \"/\":\n",
+    "    while num2 == 0 and operacao == \"/\":\n",
+    "        print('Não é possível dividir por zero')\n",
+    "        print()\n",
+    "        num1 = float(input(\"Digite o Primeiro Número: \"))\n",
+    "        num2 = float(input(\"Digite o Segundo Número: \"))\n",
+    "        operacao = input(\"Selecione uma Operação (+, -, *, /): \")\n",
+    "        print()\n",
+    "        \n",
     "if operacao == \"+\":\n",
     "    resultado = num1 + num2\n",
     "    print(f\"O resultado é {resultado:.2f}\")\n",
