--- a/Curso Python - Nível Introdutório/IntroducaLogicaProgramacao.ipynb
+++ b/Curso Python - Nível Introdutório/IntroducaLogicaProgramacao.ipynb
@@ -98,6 +98,14 @@
     "else:\n",
     "    print(\"Operação Inválida.\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Algoritmo Bubble Sort."
+   ]
   }
  ],
  "metadata": {
