--- a/Curso Python - Nível Introdutório/IntroducaLogicaProgramacao.ipynb
+++ b/Curso Python - Nível Introdutório/IntroducaLogicaProgramacao.ipynb
@@ -106,6 +106,37 @@
    "source": [
     "### Algoritmo Bubble Sort."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5, 6, 7, 12, 17, 19, 22, 24, 33, 45, 54, 66, 77, 91]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [6, 3, 12, 7, 5, 19, 66, 45, 54, 24, 77, 22, 91, 33, 17]\n",
+    "\n",
+    "def bubble_sort(arr):\n",
+    "    \n",
+    "    N = len(arr)\n",
+    "    \n",
+    "    for i in range(0, N):\n",
+    "        for j in range(0, N-i-1):\n",
+    "            if arr[j] > arr[j+1]:\n",
+    "                arr[j], arr[j+1] = arr[j+1], arr[j]\n",
+    "                \n",
+    "    return arr  \n",
+    "\n",
+    "    \n",
+    "print(bubble_sort(lista))  "
+   ]
   }
  ],
  "metadata": {
