--- a/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,22 +65,22 @@
     "print(int(6.0))\n",
     "print(int(6.5))\n",
     "print(int(6.6))\n",
-    "#Hexadecimal\n",
+    "# Hexadecimal\n",
     "print(hex(390))\n",
-    "#Binário\n",
+    "# Binário\n",
     "print(bin(286))\n",
-    "#ValorAbsoluto\n",
+    "# Valor Absoluto\n",
     "print(abs(8))\n",
     "print(abs(-8))\n",
-    "#Arredondar\n",
+    "# Arredondar\n",
     "print(round(3.476213, 2))\n",
     "print(round(4.37180, 3))\n",
-    "#Potência\n",
+    "# Potência\n",
     "print(pow(6, 2))\n",
     "print(pow(4, 3))\n",
-    "#TipoVariável\n",
+    "# Tipo de Variável\n",
     "print(type(6.57))\n",
-    "#OperaçõesVariáveis\n",
+    "# Operações com Variáveis\n",
     "altura, largura = 2, 4\n",
     "perimetro = altura * 2 + largura * 2\n",
     "print(perimetro)\n",
