--- a/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -29,15 +29,22 @@
       "6\n",
       "6\n",
       "6\n",
+      "\n",
       "0x186\n",
+      "\n",
       "0b100011110\n",
+      "\n",
       "8\n",
       "8\n",
+      "\n",
       "3.48\n",
       "4.372\n",
+      "\n",
       "36\n",
       "64\n",
+      "\n",
       "<class 'float'>\n",
+      "\n",
       "12\n",
       "Bob Marley\n"
      ]
@@ -65,21 +72,28 @@
     "print(int(6.0))\n",
     "print(int(6.5))\n",
     "print(int(6.6))\n",
+    "print()\n",
     "# Hexadecimal\n",
     "print(hex(390))\n",
+    "print()\n",
     "# Binário\n",
     "print(bin(286))\n",
+    "print()\n",
     "# Valor Absoluto\n",
     "print(abs(8))\n",
     "print(abs(-8))\n",
+    "print()\n",
     "# Arredondar\n",
     "print(round(3.476213, 2))\n",
     "print(round(4.37180, 3))\n",
+    "print()\n",
     "# Potência\n",
     "print(pow(6, 2))\n",
     "print(pow(4, 3))\n",
+    "print()\n",
     "# Tipo de Variável\n",
     "print(type(6.57))\n",
+    "print()\n",
     "# Operações com Variáveis\n",
     "altura, largura = 2, 4\n",
     "perimetro = altura * 2 + largura * 2\n",
@@ -90,9 +104,117 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Strings e Indexação."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testando \n",
+      " Strings \n",
+      " em \n",
+      " Python\n",
+      "\n",
+      "Data Science Academy\n",
+      "Data Science AcademyData Science Academy\n",
+      "D\n",
+      "t\n",
+      "a Science Academy\n",
+      "Dat\n",
+      "y\n",
+      "Data Science Aca\n",
+      "demy\n",
+      "Data Science Academy\n",
+      "Dt cec cdm\n",
+      "ymedacA ecneicS ataD\n",
+      "Data Science Academy me ensina Python\n",
+      "\n",
+      "Data Science Academy me ensina Python\n",
+      "\n",
+      "DATA SCIENCE ACADEMY ME ENSINA PYTHON\n",
+      "\n",
+      "data science academy me ensina python\n",
+      "\n",
+      "['Data', 'Science', 'Academy', 'me', 'ensina', 'Python']\n",
+      "['Data Science Academ', ' me ensina P', 'thon']\n",
+      "\n",
+      "Data science academy me ensina python\n",
+      "\n",
+      "4\n",
+      "1\n",
+      "\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# O /n funciona como tecla Enter\n",
+    "print('Testando \\n Strings \\n em \\n Python')\n",
+    "print()\n",
+    "# Imprimindo elementos da String\n",
+    "s = 'Data Science Academy'\n",
+    "print(s)\n",
+    "print(s * 2)\n",
+    "print(s[0])\n",
+    "print(s[2])\n",
+    "print(s[3:])\n",
+    "print(s[:3])\n",
+    "print(s[-1])\n",
+    "print(s[:-4])\n",
+    "print(s[-4:])\n",
+    "print(s[::1])\n",
+    "print(s[::2])\n",
+    "print(s[::-1])\n",
+    "print(s + \" \" + 'me ensina Python')\n",
+    "print()\n",
+    "# Mudando a String (não é possível mudar um caractere dentro dela)\n",
+    "s = s + \" \" + 'me ensina Python'\n",
+    "print(s)\n",
+    "print()\n",
+    "# FUnções Built-in de Strings\n",
+    "# Upper Case (maiúsculas)\n",
+    "print(s.upper())\n",
+    "print()\n",
+    "# Lower Case (minúsculas)\n",
+    "print(s.lower())\n",
+    "print()\n",
+    "# Dividir uma String por espaços em branco (padrão) ou caractere determinado\n",
+    "print(s.split())\n",
+    "print(s.split('y'))\n",
+    "print()\n",
+    "# Capitalize (Retorna a primeira letra como maiúscula e todas as outras como minúsculas)\n",
+    "print(s.capitalize())\n",
+    "print()\n",
+    "# Contar caracteres ou palavras\n",
+    "print(s.count('a'))\n",
+    "print(s.count('Python'))\n",
+    "print()\n",
+    "# saber se a string tem alguma característica\n",
+    "print(s.isalnum())\n",
+    "print(s.islower())\n",
+    "print(s.isspace())\n",
+    "print(s.endswith('n'))\n",
+    "print()\n",
+    "# Comparando Strings\n",
+    "print('Python' == 'R')\n",
+    "print('Python' == 'Python')\n"
+   ]
   }
  ],
  "metadata": {
