Estrutura de Dados

--- a/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
@@ -215,6 +215,14 @@
     "print('Python' == 'R')\n",
     "print('Python' == 'Python')\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estruturas de Dados."
+   ]
   }
  ],
  "metadata": {
