--- a/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
@@ -221,7 +221,194 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Estruturas de Dados."
+    "### Listas Parte 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "['Arroz, feijão, tomate, leite']\n",
+      "<class 'list'>\n",
+      "['Arroz', 'Feijão', 'Tomate', 'Leite']\n",
+      "Tomate\n",
+      "<class 'list'>\n",
+      "[23, 100, 'Cientista de Dados']\n",
+      "23 100 Cientista de Dados\n",
+      "['Laranja', 'Maça', 'Abacaxi', 'Uva']\n",
+      "['Laranja', 'Maça', 'Abacate', 'Uva']\n",
+      "['Laranja', 'Maça', 'Abacate']\n",
+      "\n",
+      "[[1, 2, 3], [2, 3, 4], [5, 6, 7]]\n",
+      "[1, 2, 3]\n",
+      "1\n",
+      "10.1\n",
+      "14\n",
+      "12.3\n",
+      "107.0\n",
+      "119.3\n",
+      "\n",
+      "[3, 7, 10, 17, 19, 22]\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Listas\n",
+    "lista1 = [\"Arroz, feijão, tomate, leite\"]\n",
+    "print(type(lista1))\n",
+    "print(lista1)\n",
+    "lista2 = [\"Arroz\", \"Feijão\", \"Tomate\", \"Leite\"]\n",
+    "print(type(lista2))\n",
+    "print(lista2)\n",
+    "print(lista2[2])\n",
+    "lista3 = [23, 100, \"Cientista de Dados\"]\n",
+    "print(type(lista3))\n",
+    "print(lista3)\n",
+    "item1 = lista3[0]\n",
+    "item2 = lista3[1]\n",
+    "item3 = lista3[2]\n",
+    "print(item1, item2, item3)\n",
+    "lista4 = [\"Laranja\", \"Maça\", \"Abacaxi\", \"Uva\"]\n",
+    "print(lista4)\n",
+    "lista4[2] = \"Abacate\"\n",
+    "print(lista4)\n",
+    "del lista4[3]\n",
+    "print(lista4)\n",
+    "print()\n",
+    "# Criando uma lista de listas\n",
+    "listas = [[1,2,3], [2,3,4], [5,6,7]] \n",
+    "print(listas)\n",
+    "print(listas[0])\n",
+    "a = listas[0]\n",
+    "b = a[0]\n",
+    "print(b)\n",
+    "listas2 = [[1,2,3], [10,15,14], [10.1,8.7,2.3]]\n",
+    "print(listas2[2][0])\n",
+    "c = listas2[1][2]\n",
+    "print(c)\n",
+    "d = listas2[2][2] + 10\n",
+    "print(d)\n",
+    "e = (listas2[0][1] + listas2[2][1]) * 10\n",
+    "print(e)\n",
+    "g = e + d\n",
+    "print(g)\n",
+    "print()\n",
+    "# Concatenando Listas\n",
+    "lista5 = [3,7,10]\n",
+    "lista6 = [17,19,22]\n",
+    "listas3 = lista5 + lista6\n",
+    "print(listas3)\n",
+    "print(7 in listas3)\n",
+    "print(34 in listas3)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Listas Parte 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "50\n",
+      "-3.4\n",
+      "['Cientista de Dados', 'Engenheiro de Dados', 'Analista de Dados', 'Engenheiro de IA']\n",
+      "['Cientista de Dados', 'Engenheiro de Dados', 'Analista de Dados', 'Engenheiro de IA', 'Engenheiro de IA']\n",
+      "2\n",
+      "\n",
+      "[]\n",
+      "[10]\n",
+      "[10, 50]\n",
+      "\n",
+      "[1, 2, 5, 10]\n",
+      "\n",
+      "['Recife', 'Manaus', 'Salvador']\n",
+      "['Recife', 'Manaus', 'Salvador', 'Rio de Janeiro', 'São Paulo']\n",
+      "2\n",
+      "\n",
+      "['São Paulo', 'Guarulhos', 'Santo André', 'São Caetano']\n",
+      "['São Paulo', 'Guarulhos', 'Santo André', 'São Bernardo', 'São Caetano']\n",
+      "['São Paulo', 'Guarulhos', 'Santo André', 'São Caetano']\n",
+      "\n",
+      "['Volkswagen', 'Honda', 'Citroen', 'Hyundai', 'Ford', 'Chevrolet']\n",
+      "['Chevrolet', 'Citroen', 'Ford', 'Honda', 'Hyundai', 'Volkswagen']\n",
+      "[8, 9, 4, 2, 5, 6, 7, 3, 1]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Funções Built-in\n",
+    "listaNumeros = [10,20,50,-3.4] \n",
+    "print(len(listaNumeros))\n",
+    "print(max(listaNumeros))\n",
+    "print(min(listaNumeros))\n",
+    "listaCarreiras = [\"Cientista de Dados\",\"Engenheiro de Dados\",\"Analista de Dados\"]\n",
+    "listaCarreiras.append(\"Engenheiro de IA\")\n",
+    "print(listaCarreiras)\n",
+    "listaCarreiras.append(\"Engenheiro de IA\")\n",
+    "print(listaCarreiras)\n",
+    "print(listaCarreiras.count(\"Engenheiro de IA\"))\n",
+    "print()\n",
+    "# Criando uma Lista vazia\n",
+    "listaVazia = []\n",
+    "print(listaVazia)\n",
+    "listaVazia.append(10)\n",
+    "print(listaVazia)\n",
+    "listaVazia.append(50)\n",
+    "print(listaVazia)\n",
+    "print()\n",
+    "# Copiando os itens de uma Lista antiga para uma nova\n",
+    "listaAntiga = [1,2,5,10]\n",
+    "listaNova = []\n",
+    "for item in listaAntiga:\n",
+    "    listaNova.append(item)\n",
+    "print(listaNova)\n",
+    "print()\n",
+    "# Estender uma lista\n",
+    "listaCidades = [\"Recife\",\"Manaus\",\"Salvador\"]\n",
+    "print(listaCidades)\n",
+    "listaCidades.extend([\"Rio de Janeiro\",\"São Paulo\"])\n",
+    "print(listaCidades)\n",
+    "print(listaCidades.index('Salvador'))\n",
+    "print()\n",
+    "# Adicionar e remover itens da Lista\n",
+    "listaMunicipios = ['São Paulo', 'Guarulhos', 'Santo André', 'São Caetano']\n",
+    "print(listaMunicipios)\n",
+    "listaMunicipios.insert(3, 'São Bernardo')\n",
+    "print(listaMunicipios)\n",
+    "listaMunicipios.remove('São Bernardo')\n",
+    "print(listaMunicipios)\n",
+    "print()\n",
+    "# Inverter e ordenar os itens da lista\n",
+    "listaMarcas = [\"Chevrolet\", \"Ford\", \"Hyundai\", \"Citroen\", \"Honda\", \"Volkswagen\"]\n",
+    "listaMarcas.reverse()\n",
+    "print(listaMarcas)\n",
+    "listaMarcas.sort()\n",
+    "print(listaMarcas)\n",
+    "listaValores = [1,3,7,6,5,2,4,9,8]\n",
+    "listaValores.reverse()\n",
+    "print(listaValores)\n",
+    "listaValores.sort()\n",
+    "print(listaValores)"
    ]
   }
  ],
