--- a/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
@@ -410,6 +410,14 @@
     "listaValores.sort()\n",
     "print(listaValores)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dicionários Parte 1. (Upado)"
+   ]
   }
  ],
  "metadata": {
