--- a/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
@@ -418,6 +418,81 @@
    "source": [
     "### Dicionários Parte 1. (Upado)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "['Pedro', 22, 'Ronaldo', 24, 'Ana', 26, 'Janaina', 28]\n",
+      "<class 'dict'>\n",
+      "{'Pedro': 22, 'Ronaldo': 24, 'Ana': 26, 'Janina': 28}\n",
+      "22\n",
+      "24\n",
+      "\n",
+      "{'Pedro': 22, 'Ronaldo': 24, 'Ana': 26, 'Janina': 28, 'Marcelo': 30}\n",
+      "{'Isis': 44}\n",
+      "{}\n",
+      "\n",
+      "4\n",
+      "dict_keys(['Gabriel', 'Junior', 'Manoel', 'Maria'])\n",
+      "dict_values([22, 24, 26, 28])\n",
+      "\n",
+      "{'Gabriel': 22, 'Junior': 24, 'Manoel': 26, 'Maria': 28, 'Vitor': 30, 'Messias': 32, 'Mari': 34, 'Esther': 36}\n",
+      "\n",
+      "{'key1': 'Data Science', 'key2': 10, 'key3': 100}\n",
+      "Data Science 10 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Criando um Dicionário\n",
+    "estudantes = ['Pedro', 22, 'Ronaldo', 24, 'Ana', 26, 'Janaina', 28]\n",
+    "print(type(estudantes))\n",
+    "print(estudantes) \n",
+    "estudantes = {'Pedro':22, 'Ronaldo':24, 'Ana':26, 'Janina':28}\n",
+    "print(type(estudantes))\n",
+    "print(estudantes)\n",
+    "print(estudantes['Pedro'])\n",
+    "print(estudantes[\"Ronaldo\"])\n",
+    "print()\n",
+    "# Adicionando, limpoando e deletando o Dicionário\n",
+    "estudantes['Marcelo'] = 30\n",
+    "print(estudantes)\n",
+    "estudantesVazio = {} # Dicionário vazio criado\n",
+    "estudantesVazio['Isis'] = 44\n",
+    "print(estudantesVazio)\n",
+    "estudantes.clear()\n",
+    "print(estudantes)\n",
+    "del estudantes #deletado o dicionário\n",
+    "print()\n",
+    "# Chaves e Valores\n",
+    "estudantes2 = {'Gabriel':22, 'Junior':24, 'Manoel':26, 'Maria':28}\n",
+    "print(len(estudantes2))\n",
+    "print(estudantes2.keys())\n",
+    "print(estudantes2.values())\n",
+    "print()\n",
+    "# Update de Dicionários\n",
+    "estudantes3 = {'Vitor': 30, 'Messias':32, 'Mari':34, 'Esther':36}\n",
+    "estudantes2.update(estudantes3)\n",
+    "print(estudantes2)\n",
+    "print()\n",
+    "# Extraindo Valores de Chaves\n",
+    "dict = {}\n",
+    "dict['key1'] = 'Data Science'\n",
+    "dict['key2'] = 10\n",
+    "dict['key3'] = 100\n",
+    "print(dict)\n",
+    "a = dict['key1']\n",
+    "b = dict['key2']\n",
+    "c = dict['key3']\n",
+    "print(a, b, c)"
+   ]
   }
  ],
  "metadata": {
