--- a/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
@@ -493,6 +493,14 @@
     "c = dict['key3']\n",
     "print(a, b, c)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dicionários Parte 2."
+   ]
   }
  ],
  "metadata": {
