--- a/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
@@ -501,6 +501,52 @@
    "source": [
     "### Dicionários Parte 2."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'chave1': 1230, 'chave2': [22, 453, 73.4], 'chave3': ['mamão', 'banana', 'abacaxi']}\n",
+      "[22, 453, 73.4]\n",
+      "\n",
+      "mamão\n",
+      "MAMÃO\n",
+      "\n",
+      "253\n",
+      "\n",
+      "{'chave1': 1230, 'chave2': [22, 453, 100.0], 'chave3': ['mamão', 'banana', 'abacaxi']}\n",
+      "\n",
+      "dict aninhado em python\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dicionário de Listas\n",
+    "dict1 = {'chave1':1230, 'chave2':[22,453,73.4], 'chave3':['mamão','banana','abacaxi']}\n",
+    "print(dict1)\n",
+    "print(dict1['chave2'])\n",
+    "print()\n",
+    "# Acessando um item da lista, dentro do dicionário\n",
+    "print(dict1['chave3'][0])\n",
+    "print(dict1['chave3'][0].upper())\n",
+    "print()\n",
+    "# Operações com item da lista, dentro do dicionário\n",
+    "var1 = dict1['chave2'][1] - 200\n",
+    "print(var1)\n",
+    "print()\n",
+    "# Duas operações no mesmo comando, para atualizar um item dentro da lista\n",
+    "dict1['chave2'][2] += 26.6 # faz a operação e depois atribui com o '='\n",
+    "print(dict1)\n",
+    "print()\n",
+    "# Criando dicionários aninhados\n",
+    "dictAninhado = {'key1':{'key2':{'key3':'dict aninhado em python'}}}\n",
+    "print(dictAninhado['key1']['key2']['key3'])"
+   ]
   }
  ],
  "metadata": {
