--- a/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
@@ -547,6 +547,14 @@
     "dictAninhado = {'key1':{'key2':{'key3':'dict aninhado em python'}}}\n",
     "print(dictAninhado['key1']['key2']['key3'])"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tuplas."
+   ]
   }
  ],
  "metadata": {
