--- a/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
@@ -555,6 +555,56 @@
    "source": [
     "### Tuplas."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Geografia', 23, 'Elefantes', 9.8, 'Python')\n",
+      "Chocolate\n",
+      "\n",
+      "Mar\n",
+      "5\n",
+      "('Aviões', 18.8, 'Geladeira')\n",
+      "2\n",
+      "\n",
+      "<class 'list'>\n",
+      "<class 'tuple'>\n",
+      "['Mariana', 44, 'Luis', 55]\n",
+      "('Mariana', 44, 'Luis', 55)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Criando uma Tupla (Não podem ser alteradas)\n",
+    "tupla1 = ('Geografia', 23, 'Elefantes', 9.8, 'Python' )\n",
+    "print(tupla1)\n",
+    "tupla2 = ('Chocolate')\n",
+    "print(tupla2)\n",
+    "print()\n",
+    "# Trabalhando com Tuplas\n",
+    "tupla2 = ('Mar', 34, 'Aviões', 18.8, 'Geladeira' )\n",
+    "print(tupla2[0])\n",
+    "print(len(tupla2))\n",
+    "print(tupla2[2:])\n",
+    "print(tupla2.index('Aviões'))\n",
+    "del tupla2\n",
+    "print()\n",
+    "# Convertendo Tuplas para Listas e Listas para Tuplas\n",
+    "tupla3 = ('Mariana', 44, 'Luis')\n",
+    "listaConvertida = list(tupla3)\n",
+    "print(type(listaConvertida))\n",
+    "print(type(tupla3))\n",
+    "listaConvertida.append(55)\n",
+    "tupla3 = tuple(listaConvertida)\n",
+    "print(listaConvertida)\n",
+    "print(tupla3)"
+   ]
   }
  ],
  "metadata": {
