--- a/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
@@ -616,6 +616,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 \n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercício 1 - Imprima na tela os números de 1 a 10. Use uma lista para armazenar os números.\n",
+    "lista1 = []\n",
+    "\n",
+    "for i in range (1, 11, 1):\n",
+    "    print(i, end=' ')\n",
+    "    lista1.append(i)\n",
+    "\n",
+    "print()\n",
+    "print(lista1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercício 2 - Crie uma lista de 5 objetos e imprima na tela\n",
+    "listaObjetos = ['Marte', 'Júpiter', 'Terra', 'Vênus', 'Mercúrio']\n",
+    "print(listaObjetos)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercício 3 - Crie duas strings e concatene as duas em uma terceira string\n",
+    "string1 = 'Todo dia ela'\n",
+    "string2 = 'faz tudo sempre igual'\n",
+    "string3 = string1 +' '+ string2\n",
+    "print(string3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercício 4 - Crie uma tupla com os seguintes elementos: 1, 2, 2, 3, 4, 4, 4, 5 e depois utilize a função count do \n",
+    "# objeto tupla para verificar quantas vezes o número 4 aparece na tupla\n",
+    "tupla1 = (1, 2, 2, 3, 4, 4, 4, 5)\n",
+    "print(tupla1.count(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
