--- a/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/VariaveisTiposEstruturaDados.ipynb
@@ -642,9 +642,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Marte', 'Júpiter', 'Terra', 'Vênus', 'Mercúrio']\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 2 - Crie uma lista de 5 objetos e imprima na tela\n",
     "listaObjetos = ['Marte', 'Júpiter', 'Terra', 'Vênus', 'Mercúrio']\n",
@@ -654,9 +663,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Todo dia ela faz tudo sempre igual\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 3 - Crie duas strings e concatene as duas em uma terceira string\n",
     "string1 = 'Todo dia ela'\n",
@@ -667,9 +684,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 4 - Crie uma tupla com os seguintes elementos: 1, 2, 2, 3, 4, 4, 4, 5 e depois utilize a função count do \n",
     "# objeto tupla para verificar quantas vezes o número 4 aparece na tupla\n",
@@ -679,45 +704,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercício 5 - Crie um dicionário vazio e imprima na tela\n",
+    "dict1 = {}\n",
+    "print(dict1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'key1': 10, 'key2': 20, 'key3': 30}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercício 6 - Crie um dicionário com 3 chaves e 3 valores e imprima na tela\n",
+    "dict2 = {'key1':10, 'key2':20, 'key3':30}\n",
+    "print(dict2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'key1': 10, 'key2': 20, 'key3': 30, 'key4': 40}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercício 7 - Adicione mais um elemento ao dicionário criado no exercício anterior e imprima na tela\n",
+    "dict2 = {'key1':10, 'key2':20, 'key3':30}\n",
+    "dict2['key4'] = 40\n",
+    "print(dict2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'SP': [11, 13], 'RJ': 21, 'BH': 31}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercício 8 - Crie um dicionário com 3 chaves e 3 valores. \n",
+    "# Um dos valores deve ser uma lista de 2 elementos numéricos. \n",
+    "# Imprima o dicionário na tela.\n",
+    "dict3 = {'SP':[11,13], 'RJ':21, 'BH':31}\n",
+    "print(dict3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Olá Mundo!', ('Batata', 13), {'chave1': 22, 'chave2': 34}, 4.67]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercício 9 - Crie uma lista de 4 elementos. O primeiro elemento deve ser uma string, \n",
+    "# o segundo uma tupla de 2 elementos, o terceiro um dcionário com 2 chaves e 2 valores e \n",
+    "# o quarto elemento um valor do tipo float.\n",
+    "# Imprima a lista.\n",
+    "lista2 = ['Olá Mundo!', ('Batata', 13), {'chave1':22, 'chave2':34}, 4.67]\n",
+    "print(lista2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cientista de Dados\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercício 10 - Considere a string abaixo. Imprima na tela apenas os caracteres da posição 1 (primeiro do texto) a 18.\n",
+    "frase = 'Cientista de Dados é o profissional mais sexy do século XXI'\n",
+    "print(frase[0:18])"
+   ]
   }
  ],
  "metadata": {
