--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -5,24 +5,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Condicional if."
+    "### Condicionais e Operadores Relacionais."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "A sentença é verdadeira!\n",
+      "A sentença não é verdadeira!\n",
+      "\n",
+      "Hoje vai chover!\n",
+      "\n",
+      "Sem previsão do tempo para o dia selecionado\n",
+      "\n",
+      "Essa expressão é verdadeira\n",
+      "Essa expressão não é verdadeira\n",
+      "Essa expressão é verdadeira\n",
+      "Essa expressão não é verdadeira\n",
+      "Essa expressão é verdadeira\n",
+      "Essa expressão é verdadeira\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "# Condicional if (se)... else (senão)\n",
+    "print(5>2) # booleano tradicional\n",
+    "print(5<2) # booleano tradicional\n",
+    "if 5 > 2:\n",
+    "    print('A sentença é verdadeira!')\n",
+    "else:\n",
+    "    print('A sentença não é verdadeira!')\n",
+    "    \n",
+    "if 5 < 2:\n",
+    "    print('A sentença é verdadeira!')\n",
+    "else:\n",
+    "    print('A sentença não é verdadeira!')\n",
+    "print()\n",
+    "\n",
+    "# Condicional if (se)... else (senão) com variável\n",
+    "dia = 'Terça'\n",
+    "if dia == 'segunda':\n",
+    "    print('Hoje fará sol!')\n",
+    "else:\n",
+    "    print('Hoje vai chover!')\n",
+    "print()\n",
+    "\n",
+    "# Podemos usar o operador elif para validar mais uma condição\n",
+    "dia = 'Terça'\n",
+    "if dia == 'segunda':\n",
+    "    print('Hoje fará sol!')\n",
+    "elif dia == 'terça':\n",
+    "    print('Hoje vai chover!')\n",
+    "else:\n",
+    "    print('Sem previsão do tempo para o dia selecionado')\n",
+    "print()\n",
+    "\n",
+    "# Operadores relacionais em Pyhton\n",
+    "if 4 >= 4:\n",
+    "    print('Essa expressão é verdadeira')\n",
+    "else:\n",
+    "    print('Essa expressão não é verdadeira')\n",
+    "\n",
+    "if 4 == 5:\n",
+    "    print('Essa expressão é verdadeira')\n",
+    "else:\n",
+    "    print('Essa expressão não é verdadeira')  \n",
+    "    \n",
+    "if 4 - 3 == 1:\n",
+    "    print('Essa expressão é verdadeira')\n",
+    "else:\n",
+    "    print('Essa expressão não é verdadeira') \n",
+    "    \n",
+    "if 4 ** 2 == 15:\n",
+    "    print('Essa expressão é verdadeira')\n",
+    "else:\n",
+    "    print('Essa expressão não é verdadeira')     \n",
+    "\n",
+    "a = 'Carro'\n",
+    "b = 'Vermelho'\n",
+    "if a + ' ' + b == 'Carro Vermelho':\n",
+    "    print('Essa expressão é verdadeira')\n",
+    "else:\n",
+    "    print('Essa expressão não é verdadeira')  \n",
+    "    \n",
+    "a = 'Carro '\n",
+    "b = 'Vermelho'\n",
+    "if a + b == 'Carro Vermelho':\n",
+    "    print('Essa expressão é verdadeira')\n",
+    "else:\n",
+    "    print('Essa expressão não é verdadeira')     "
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
