--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -5,12 +5,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Condicionais e Operadores Relacionais."
+    "### Condicionais e Operadores."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,14 @@
       "Essa expressão é verdadeira\n",
       "Essa expressão não é verdadeira\n",
       "Essa expressão é verdadeira\n",
-      "Essa expressão é verdadeira\n"
+      "Essa expressão é verdadeira\n",
+      "\n",
+      "Ok Bob, você está autorizado a entrar!\n",
+      "\n",
+      "Ok Luis, você está autorizado a entrar!\n",
+      "Ok, você está autorizado(a) a entrar!\n",
+      "Você é um Poodle branco\n",
+      "Podemos encomendar o veículo!\n"
      ]
     }
    ],
@@ -101,7 +108,48 @@
     "if a + b == 'Carro Vermelho':\n",
     "    print('Essa expressão é verdadeira')\n",
     "else:\n",
-    "    print('Essa expressão não é verdadeira')     "
+    "    print('Essa expressão não é verdadeira')\n",
+    "print()    \n",
+    "\n",
+    "# Condicionais aninhados\n",
+    "idade = 18\n",
+    "nome = 'Bob'\n",
+    "if idade > 13:\n",
+    "    if nome == 'Bob':\n",
+    "        print('Ok Bob, você está autorizado a entrar!')\n",
+    "    else:\n",
+    "        print('Desculpe, mas você não pode entrar!')\n",
+    "print()\n",
+    "\n",
+    "# Operadores Lógicos\n",
+    "idade = 13\n",
+    "nome = 'Luis'\n",
+    "if nome == 'Luis' and idade >= 13:\n",
+    "    print('Ok Luis, você está autorizado a entrar!')\n",
+    "else:\n",
+    "    print('Desculpe, mas você não pode entrar!')\n",
+    "    \n",
+    "idade = 15\n",
+    "nome = 'Maria'\n",
+    "if (nome == 'Luis') or (idade >= 12):\n",
+    "    print('Ok, você está autorizado(a) a entrar!')\n",
+    "else:\n",
+    "    print('Desculpe, mas você não pode entrar!')  \n",
+    "    \n",
+    "cor = 'Branco'\n",
+    "raca = 'Poodle'\n",
+    "if not (raca == 'Poodle') and (cor == 'Branco'):\n",
+    "    print('Você não é um Poodle branco')\n",
+    "else:\n",
+    "    print('Você é um Poodle branco')\n",
+    "    \n",
+    "carro = 'branco'\n",
+    "valor = 100000\n",
+    "cidade = 'São Paulo'\n",
+    "if (carro != 'branco' and cidade != 'São Paulo') or valor <= 50000:\n",
+    "    print('Não podemos disponibilizar esse veículo no momento!')\n",
+    "else:\n",
+    "    print('Podemos encomendar o veículo!')"
    ]
   }
  ],
