--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -149,7 +149,9 @@
     "if (carro != 'branco' and cidade != 'São Paulo') or valor <= 50000:\n",
     "    print('Não podemos disponibilizar esse veículo no momento!')\n",
     "else:\n",
-    "    print('Podemos encomendar o veículo!')"
+    "    print('Podemos encomendar o veículo!')\n",
+    "\n",
+    "print()"
    ]
   }
  ],
