--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -159,6 +159,35 @@
    "source": [
     "### Loop for."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3 4 \n",
+      "Data Science Academy \n",
+      "0 1 2 3 4 "
+     ]
+    }
+   ],
+   "source": [
+    "# Usando o for para imprimir valores\n",
+    "tup = (2,3,4)\n",
+    "for i in tup:\n",
+    "    print(i, end=' ')\n",
+    "print()    \n",
+    "listaDeStrings = ['Data','Science','Academy']\n",
+    "for i in listaDeStrings:\n",
+    "    print(i, end=' ')\n",
+    "print()\n",
+    "for contador in range(0,5):\n",
+    "    print(contador, end=' ')"
+   ]
   }
  ],
  "metadata": {
