--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -186,7 +186,19 @@
     "    print(i, end=' ')\n",
     "print()\n",
     "for contador in range(0,5):\n",
-    "    print(contador, end=' ')"
+    "    print(contador, end=' ')\n",
+    "print()\n",
+    "listaNum = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "for num in listaNum:\n",
+    "    if num % 2 == 0:\n",
+    "        print(num, end=' ')\n",
+    "print()\n",
+    "for i in range(0,101,5):\n",
+    "    print(i, end=' ')\n",
+    "print()\n",
+    "string1 = 'Python é uma linguagem de programação divertida!'\n",
+    "for caracter in string1:\n",
+    "    print(caracter, end='')"
    ]
   }
  ],
