--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -198,7 +198,8 @@
     "print()\n",
     "string1 = 'Python é uma linguagem de programação divertida!'\n",
     "for caracter in string1:\n",
-    "    print(caracter, end='')"
+    "    print(caracter, end='')\n",
+    "print()    "
    ]
   }
  ],
